--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,19 +4,14 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
+        
+        
         {
-            "name": "Launch Chrome",
-            "request": "launch",
             "type": "chrome",
-            "url": "c:\\Users\\Olive PC\\Documents\\Webdevelopment\\class.html",
-            "webRoot": "${workspaceFolder}"
-        },
-
-        {
-            "type": "msedge",
             "request": "launch",
-            "name": "Open class.html",
-            "file": "c:\\Users\\Olive PC\\Documents\\Webdevelopment\\class.html"
+            "name": "Open picswithsize.html",
+            "file": "c:\\Users\\Akash Shabbir\\Documents\\Webdevelopment\\picswithsize.html"
         }
     ]
 }
